@@ -218,6 +218,20 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|net
+operator|.
+name|NetUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|junit
 operator|.
 name|Assert
@@ -1548,15 +1562,21 @@ block|{
 name|InetSocketAddress
 name|addr
 init|=
-operator|new
-name|InetSocketAddress
+name|NetUtils
+operator|.
+name|createSocketAddr
 argument_list|(
 name|InetAddress
 operator|.
 name|getLocalHost
 argument_list|()
+operator|.
+name|getHostName
+argument_list|()
 argument_list|,
 literal|123
+argument_list|,
+literal|null
 argument_list|)
 decl_stmt|;
 name|checkShortCircuitRenewCancel
@@ -1590,23 +1610,34 @@ argument_list|(
 literal|123
 argument_list|)
 decl_stmt|;
-name|checkShortCircuitRenewCancel
-argument_list|(
-name|rmAddr
-argument_list|,
-operator|new
 name|InetSocketAddress
+name|serviceAddr
+init|=
+name|NetUtils
+operator|.
+name|createSocketAddr
 argument_list|(
 name|InetAddress
 operator|.
 name|getLocalHost
+argument_list|()
+operator|.
+name|getHostName
 argument_list|()
 argument_list|,
 name|rmAddr
 operator|.
 name|getPort
 argument_list|()
+argument_list|,
+literal|null
 argument_list|)
+decl_stmt|;
+name|checkShortCircuitRenewCancel
+argument_list|(
+name|rmAddr
+argument_list|,
+name|serviceAddr
 argument_list|,
 literal|true
 argument_list|)
@@ -1627,15 +1658,21 @@ block|{
 name|InetSocketAddress
 name|rmAddr
 init|=
-operator|new
-name|InetSocketAddress
+name|NetUtils
+operator|.
+name|createSocketAddr
 argument_list|(
 name|InetAddress
 operator|.
 name|getLocalHost
 argument_list|()
+operator|.
+name|getHostName
+argument_list|()
 argument_list|,
 literal|123
+argument_list|,
+literal|null
 argument_list|)
 decl_stmt|;
 name|checkShortCircuitRenewCancel
@@ -1677,15 +1714,21 @@ block|{
 name|InetSocketAddress
 name|rmAddr
 init|=
-operator|new
-name|InetSocketAddress
+name|NetUtils
+operator|.
+name|createSocketAddr
 argument_list|(
 name|InetAddress
 operator|.
 name|getLocalHost
 argument_list|()
+operator|.
+name|getHostName
+argument_list|()
 argument_list|,
 literal|123
+argument_list|,
+literal|null
 argument_list|)
 decl_stmt|;
 name|checkShortCircuitRenewCancel
@@ -1722,15 +1765,21 @@ block|{
 name|InetSocketAddress
 name|rmAddr
 init|=
-operator|new
-name|InetSocketAddress
+name|NetUtils
+operator|.
+name|createSocketAddr
 argument_list|(
 name|InetAddress
 operator|.
 name|getLocalHost
 argument_list|()
+operator|.
+name|getHostName
+argument_list|()
 argument_list|,
 literal|123
+argument_list|,
+literal|null
 argument_list|)
 decl_stmt|;
 name|checkShortCircuitRenewCancel
